--- a/data/styles.css
+++ b/data/styles.css
@@ -12,19 +12,29 @@ h1 {
    text-align: center;
 }   
 
-.tile {
-    width: 85%;
+.wrapper {
+    display: flex;
+    width: 50em;
     margin: 0 auto;
-    padding:1em;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.tile {
+    width: 20em;
+    padding: 2em;
     text-align: center;
     border-radius: 2em;
     color: white;
     height: 8em;
     display: flex;
-    justify-content: center;
     align-items: center;
     margin-top: 2em;
     margin-bottom: 2em;
+}
+
+.tile.double {
+    width: 60em;
 }
 
 .tile .icon-box {
@@ -39,6 +49,11 @@ h1 {
     width: 70%;
     font-weight: 800;
     font-size: 4em;
+}
+
+.text-container {
+    font-size: 0.8em;
+    
 }
 
 .icon {
@@ -57,7 +72,7 @@ h1 {
     background-color: #C4E538;
 }
 
-/* First breakpoint */
+/* First breakpoint
 @media (min-width: 400px) and (max-width: 1200px){
     .tile{
         width: 20em;
@@ -85,4 +100,4 @@ h1 {
     h1 {
         margin: 2em auto;
     }
-}
+} */
