--- a/PlatformIO/data/styles.css
+++ b/PlatformIO/data/styles.css
@@ -22,7 +22,7 @@ h1 {
 
 .tile {
     width: 20em;
-    padding: 2em;
+    padding: 1em 2em;
     text-align: center;
     border-radius: 2em;
     color: white;
@@ -47,7 +47,7 @@ h1 {
     display: inline-block;
     width: 70%;
     font-weight: 800;
-    font-size: 4em;
+    font-size: 3em;
 }
 
 .text-container {
@@ -77,6 +77,69 @@ h1 {
 
 #wind {
     background-color: #52D9D4;
+}
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 2em;
+    /* height: 34px; */
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: calc(100% - 8px);
+    width: 1em;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #61D1C4;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #61D1C4;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(0.75em);
+    -ms-transform: translateX(0.75em);
+    transform: translateX(0.75em);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
 
 /* First breakpoint
